# tshell

./: Cargo.toml  README.md  config.json
src/: funcs.rs  main.rs  parser.rs
src/user_assist/: errors.rs  help.rs
